[package]
name = "ttt_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "uuid",
  "postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
