[package]
name = "ttt_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "uuid",
  "postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
